@startuml

left to right direction

enum Gender {
    MALE
    FEMALE
    OTHER
}

class User {
    id: number
    login: text
    password: text
    firstname: text
    lastname: text
    birthdate: date
    email: text
    phone: text

    ' ADRESSE '
    city: text
    zip: text
    street: text
}
User "*" -- "1" Gender: gender

class Recipe {
    title: text
    preparation: text
}
Recipe "1" -- "*" Ingredient: ingredients
Recipe "*" -- "*" User: favoris

class Ingredient {
    quantity: number
    unit: text
}
Ingredient "*" -- "1" Aliment: aliment

class Aliment {
    id: number
    name: text
}

class Categ {

}
Categ "*" -- "1" Aliment: aliment_sup
Categ "*" -- "1" Aliment: aliment_inf

@enduml